client/src/styles/generalStyles.css
* {
  box-sizing: border-box;
}

.heroDivStyle {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh;
  background-size: cover;
  width: 100%;
  margin-top: 20px;
}

.containerStyle {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: white;
  padding: 10px;
  border-radius: 20px;
  max-height: 45vh;
  overflow-y: auto;
  overflow-x: hidden;
  /* width: 75%; */
}

.flexSpaceEven {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 5px;
}

/* .flexSpaceEvenVertical{
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 5px;
} */

.inputContainer {
  display: flex;
  flex-direction: row;
  column-gap: 10px;
  /* flex-wrap: wrap; */
  /* justify-content: space-evenly; */
  justify-content: center;
  align-items: center;
}

.containerStyle::-webkit-scrollbar {
  display: none;
}

.tripItemStyle {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #274060;
  border: 1px solid grey;
  border-radius: 10px;
  padding: 2px;
  margin-bottom: 2px;
  color: white;
  width: 100%;
}

.mouseover:hover {
  cursor: pointer;
}

.paymentform {
  margin-top: 120px;
}

.formButton {
  display: "flex";
  justify-content: "center";
  align-items: "center";
  margin-top: 10px;
}

@media only screen and (max-width: 450px) {
  .containerStyle {
    width: calc(100vw);
    overflow-x: auto;
  }
  .inputContainer {
    width: calc(100vw - 20px);
    margin-bottom: 5px;
    padding: 5px;
  }
}

@media only screen and (max-width: 600px) {
  .tripItemStyle {
    padding: 0 5px;
  }
  .containerStyle {
    width: calc(100vw - 20px);
  }
  .inputContainer {
    width: calc(100vw - 10px);
    margin-bottom: 5px;
    padding: 5px;
  }
}

@media only screen and (min-width: 601px) {
  .containerStyle {
    width: 75%;
  }
  .inputContainer {
    width: 80%;
    margin-bottom: 10px;
    padding: 10px;
  }
  .formButton {
  }
}

